# ipts-rust

./: .gitignore  Cargo.toml  LICENSE
dump-parser/: Cargo.toml
dump-parser/src/: main.rs
engine/: Cargo.toml  LICENSE
engine-avx512/: Cargo.toml
engine-avx512/.cargo/: config.toml
engine-avx512/src/: lib.rs  main.rs
engine/src/: bind_sets.rs  buffers.rs  lib.rs  main.rs
engine/src/shaders/: 0_0_unpack.glsl  0_1_invert.glsl  1.txt  1_0_hightide.glsl  1_1_lowtide.glsl  1_2_lowpass.glsl  2.txt  3_0_index.glsl  3_1_a_connect.glsl  3_1_b_connect.glsl  3_2_activate.glsl  3_3_deactivate.glsl  3_4_pack.glsl  3_5_mask.glsl  3_6_blur.txt  3_7_horiz.glsl  3_8_cursor.glsl  mod.rs
heatmap-visualizer/: Cargo.toml
heatmap-visualizer/src/: main.rs
ipts-dbg-rust/: Cargo.toml
ipts-dbg-rust/src/: main.rs
ipts-dev/: Cargo.toml
ipts-dev/src/: device_info.rs  header_and_buffer.rs  lib.rs
ipts-dev/src/ioctl/: mod.rs  raw.rs
ipts-dev/src/ipts/: ext.rs  inner.rs  mod.rs  sync.rs  tokio.rs
ipts-reset/: Cargo.toml
ipts-reset/src/: main.rs
live-heatmap/: Cargo.toml
live-heatmap/src/: main.rs
live-heatmap/src/shaders/: fs_cursor.glsl  fs_heatmap.glsl  vs_cursor.glsl  vs_fullscreen.glsl
mtinput/: Cargo.toml
mtinput/src/: lib.rs
mtserver/: Cargo.toml
mtserver-quic/: Cargo.toml
mtserver-quic/src/: lib.rs  main.rs  mux.rs  quic.rs  server.rs  tls.rs
mtserver/src/: main.rs
multitouch/: Cargo.toml
multitouch-avx512/: Cargo.toml
multitouch-avx512/src/: main.rs
multitouch-client/: Cargo.toml
multitouch-client/src/: main.rs
multitouch-quic-client/: Cargo.toml
multitouch-quic-client/src/: client.rs  lib.rs  main.rs  quic.rs  tls.rs
multitouch/src/: main.rs
quic-common/: Cargo.toml
quic-common/src/: config.rs  datagram.rs  lib.rs  quic_common.rs
scroll-test/: Cargo.toml
scroll-test/src/: main.rs
singletouch/: Cargo.toml
singletouch/src/: main.rs
systemd/system/: ipts_rust_multitouch.service
utils/: Cargo.toml
utils/src/: heatmap.rs  lib.rs  tcp.rs
utils/src/pointers/: mod.rs  network.rs  pointers.rs  report.rs  tcp.rs  tests.rs
zoom-test/: Cargo.toml
zoom-test/src/: main.rs
