cargo-features = ["strip"]

[workspace]

members = [
    "dump-parser",
    "engine",
    "engine-avx512",
    "heatmap-visualizer",
    "ipts-dbg-rust",
    "ipts-dev",
    "ipts-reset",
    "live-heatmap",
    "mtinput",
    "mtserver",
    "mtserver-quic",
    "multitouch",
    "multitouch-avx512",
    "multitouch-client",
    "multitouch-quic-client",
    "quic-common",
    "scroll-test",
    "singletouch",
    "utils",
    "zoom-test",
]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = "symbols"
