[package]
name = "engine"
version = "0.1.0"
authors = ["Daniel Tang <danielzgtg.opensource@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils.path = "../utils"
vulkano = "0.20.0"
vulkano-shaders = "0.20.0"
