[package]
name = "live-heatmap"
version = "0.1.0"
authors = ["Daniel Tang <danielzgtg.opensource@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { path = "../engine" }
ipts-dev = { path = "../ipts-dev" }
winit = "0.24.0"

[dependencies.utils]
path = "../utils"

# TODO switch to 0.22.0 once my barrier PR is merged
[dependencies.vulkano]
path = "../../vulkano/vulkano"

[dependencies.vulkano-shaders]
path = "../../vulkano/vulkano-shaders"

[dependencies.vulkano-win]
path = "../../vulkano/vulkano-win"
