[package]
name = "mtserver-quic"
version = "0.1.0"
authors = ["Daniel Tang <danielzgtg.opensource@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mtinput.path = "../mtinput"
utils.path = "../utils"
quic-common.path = "../quic-common"
