[package]
name = "multitouch-avx512"
version = "0.1.0"
authors = ["Daniel Tang <danielzgtg.opensource@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = { version = "3.1.8", features = ["termination"] }
engine-avx512.path = "../engine-avx512"
ipts-dev.path = "../ipts-dev"
mtinput.path = "../mtinput"
utils.path = "../utils"
