[package]
name = "multitouch-client"
version = "0.1.0"
authors = ["Daniel Tang <danielzgtg.opensource@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = { version = "3.1.8", features = ["termination"] }
engine.path = "../engine"
ipts-dev.path = "../ipts-dev"
utils.path = "../utils"
