[package]
name = "multitouch-quic-client"
version = "0.1.0"
authors = ["Daniel Tang <danielzgtg.opensource@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = { version = "3.1.8", features = ["termination"] }

[dependencies.engine-avx512]
path = "../engine-avx512"

[dependencies.ipts-dev]
path = "../ipts-dev"
features = ["tokio"]

[dependencies.quic-common]
path = "../quic-common"

[dependencies.utils]
path = "../utils"
