[package]
name = "quic-common"
version = "0.1.0"
authors = ["Daniel Tang <danielzgtg.opensource@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "2.0.0"
bytes = "1.1.0"
byteorder = "1.4.3"
futures-util = "0.3.17"
rustls = "0.19"
rustls-pemfile = "0.2"
toml = "0.5.8"
webpki = "0.21.4"

[dependencies.quinn]
path = "../../quinn/quinn"

[dependencies.quinn-proto]
path = "../../quinn/quinn-proto"

[dependencies.serde]
version = "1.0.130"
features = ["derive"]

[dependencies.tokio]
version = "1.11"
features = ["macros", "rt", "signal", "sync", "time"]

[dependencies.utils]
path = "../utils"
