[package]
name = "singletouch"
version = "0.1.0"
authors = ["Daniel Tang <danielzgtg.opensource@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = { version = "3.1.8", features = ["termination"] }

[dependencies.ipts-dev]
path = "../ipts-dev"

[dependencies.mtinput]
path = "../mtinput"

[dependencies.utils]
path = "../utils"
